...
            }
        )
    }

    Scaffold(
        modifier = Modifier
            .testTag("homeScreenRoot")
            .padding(start = Dimens.mediumSpacing, end = Dimens.mediumSpacing),
        topBar = {
            Column {
                Row(
                    modifier = Modifier
                        .fillMaxWidth()
...

            SessionItem(sessionId = sessionId)

            NavHost(navController = navController, startDestination = LoginScreenNav) {
                composable<LoginScreenNav> {
                    ProfileSwitcher(
                        profileName = currentConfig?.callerIdName
                            ?: stringResource(R.string.missing_profile)
                    ) {
                        showLoginBottomSheet = true
                    }
                }
                composable<CallScreenNav> {
...
                        }*/
                    }

                    RoundSmallButton(
                        modifier = Modifier
                            .height(Dimens.size32dp)
                            .testTag("addNewProfileButton"),
                        text = stringResource(id = R.string.add_new_profile),
                        textSize = 12.sp,
                        backgroundColor = secondary_background_color,
                        icon = painterResource(R.drawable.ic_add),
                        iconContentDescription = stringResource(R.string.add_new_profile)
                    ) {
...
    }
}


@Composable
fun ProfileListView(
    profileList: List<Profile> = emptyList(),
    selectedProfile: Profile?,
    onItemSelected: (Profile) -> Unit = {},
    onEdit: (Profile) -> Unit = {},
    onDelete: (Profile) -> Unit = {}
) {
    Column(verticalArrangement = Arrangement.spacedBy(Dimens.mediumSpacing)) {
...
}

@Composable
fun PosNegButton(
    positiveText: String,
    negativeText: String,
    positiveTestTag: String = "positiveButton",
    negativeTestTag: String = "negativeButton",
    contentAlignment: Alignment = Alignment.BottomEnd,
    onPositiveClick: () -> Unit = {},
    onNegativeClick: () -> Unit = {}
) {
    Box(modifier = Modifier.fillMaxWidth(), contentAlignment = contentAlignment) {
...
        ) {
            RegularText(
                text = profileName,
                modifier = Modifier.testTag("profileName")
            )
            RoundSmallButton(
                modifier = Modifier.testTag("switchProfileButton"),
                text = stringResource(R.string.switch_profile),
                textSize = 14.sp,
                backgroundColor = MaterialTheme.colorScheme.background
            ) {
                onProfileSwitch()
            }
...
    ) {

        RoundedOutlinedButton(
            text = if (state) stringResource(R.string.disconnect) else stringResource(R.string.connect),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("connectDisconnectButton")
        ) {
            if (state) {
                telnyxViewModel.disconnect(context)
            } else {
                currentConfig?.let { profile ->
                    if (profile.sipToken?.isEmpty() == false) {
...
