...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/callInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/call"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/answer_green"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/baseline_call_24"
                        app:iconTint="@color/black" />
...
                    style="@style/CustomOutlinedButton"
                    android:textSize="@dimen/font_button"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/callActiveView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_normal"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
...
                    android:padding="@dimen/spacing_tiny"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/mute"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/mute_24"
                        />

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/loudSpeaker"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/speaker_off_24"
                        />
...
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/endCall"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/reject_red"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/baseline_call_reject_24"
                        app:iconTint="@color/white"
...
